Add custom timesince and styled index.html

--- a/core/templates/core/inbox.html
+++ b/core/templates/core/inbox.html
@@ -250,7 +250,7 @@
                                   <div class="d-flex flex-column justify-content-start">
                                     <h6 class="mb-0 text-sm">{{ sender.username }}
                                 
-                                <small> {{ latest_message.date_sent|timesince|get_first_word }} hours ago
+                                <small> {{ latest_message.date_sent|custom_timesince }}
                                   
           
                                 </small>
