--- a/core/templates/core/followers_following_list.html
+++ b/core/templates/core/followers_following_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load custom_filters %}
 {% load static %}
 
 {% block content %}
@@ -161,178 +162,162 @@
               </form>
             </div>
           </div>
-          <!-- Notification begins -->
-          <li class="nav-item dropdown pe-2 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              <span class="bell-icon m-3">
-                <i class="fa fa-bell cursor-pointer text-dark"></i>
-                <small class="text-danger fw-bolder">23</small>
-              </span>
-            </a>
+         <!-- Notification begins -->
+            <li class="nav-item dropdown pe-2 d-flex align-items-center">
+              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton message-link"
+   data-bs-toggle="dropdown" aria-expanded="false" onclick="hideNotificationCount()">
+                <span class="bell-icon m-3">
+                  <i class="fa fa-bell cursor-pointer text-dark"></i>
+                  {% if distinct_senders.count >= 1 %}
+                    <small id="notification-count" class="text-danger fw-bolder">{{distinct_senders_count.count}}</small>
+                  {% endif %}
+                </span>
+              </a>
+    
+              <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+              {% if distinct_senders %}  
+                {% for sender in distinct_senders %}
+                  {% with messages=sender.sent_messages.all %}
+                    {% if messages %}
+                      {% with latest_message=messages.latest %}
+                        <li class="mb-2">
+                          <a class="dropdown-item border-radius-md" href="{% url 'message' sender.username %}">
+                            <div class="d-flex py-1">
+                              <div class="my-auto">
+                                <img src="{{ sender.profile.image.url }}" class="avatar avatar-sm  me-3 ">
+                              </div>
+                              <div class="d-flex flex-column justify-content-center">
+                                <h6 class="text-sm font-weight-normal mb-1">
+                                  <span class="font-weight-bold">New message</span> from {{ sender.username }}
+                                </h6>
+                                <p class="text-xs text-secondary mb-0">
+                                  <i class="fa fa-clock me-1"></i>
+                                  {{ latest_message.date_sent|custom_timesince }}
+                                </p>
+                              </div>
+                            </div>
+                          </a>
+                        </li>
+                      {% endwith %}
+                    {% endif %}
+                  {% endwith %}
+                {% endfor %}
+                   {% if distinct_senders_count.count > 3 %}
+                    <li>
+                      <div class="d-flex py-1">
+                        <a class="dropdown-item border-radius-md" href="{% url 'inbox' %}">View all....</a>
+                      </div>
+                    </li>
+                  {% endif %}
+                {% else %}
+                <small>no new message</small>
+              {% endif %}  
+              </ul>
+            </li>
+            <!-- Notification end -->
 
-            <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
-              <li class="mb-2">
-                <a class="dropdown-item border-radius-md" href="javascript:;">
-                  <div class="d-flex py-1">
-                    <div class="my-auto">
-                      <img src="./assets/img/team-2.jpg" class="avatar avatar-sm  me-3 ">
+            <!-- User Profile -->
+            <li class="nav-item dropdown pe-2 d-flex align-items-center">
+              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <img src="{{ request.user.profile.image.url }}" class="avatar avatar-sm  me-3 ">
+              </a>
+    
+              <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'home' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <ion-icon name="home"></ion-icon>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Home</span>
+                        </h6>
+                      </div>
                     </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm font-weight-normal mb-1">
-                        <span class="font-weight-bold">New message</span> from Laur
-                      </h6>
-                      <p class="text-xs text-secondary mb-0">
-                        <i class="fa fa-clock me-1"></i>
-                        13 minutes ago
-                      </p>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'profile' request.user.username %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Profile</span>
+                        </h6>
+                      </div>
                     </div>
-                  </div>
-                </a>
-              </li>
-              <li class="mb-2">
-                <a class="dropdown-item border-radius-md" href="javascript:;">
-                  <div class="d-flex py-1">
-                    <div class="my-auto">
-                      <img src="./assets/img/small-logos/logo-spotify.svg"
-                        class="avatar avatar-sm bg-gradient-dark  me-3 ">
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'inbox' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <ion-icon name="mail"></ion-icon>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Chats</span>
+                        </h6>
+                      </div>
                     </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm text-dark font-weight-normal mb-1">
-                        <span class="font-weight-bold">New album</span> by Travis Scott
-                      </h6>
-                      <p class="text-xs text-secondary mb-0">
-                        <i class="fa fa-clock me-1"></i>
-                        1 day
-                      </p>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'settings' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <ion-icon name="settings"></ion-icon>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Settings</span>
+                        </h6>
+                      </div>
                     </div>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item border-radius-md" href="javascript:;">
-                  <div class="d-flex py-1">
-                    <div class="avatar avatar-sm bg-gradient-secondary  me-3  my-auto">
-                      <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <title>credit-card</title>
-                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                          <g transform="translate(-2169.000000, -745.000000)" fill="#FFFFFF" fill-rule="nonzero">
-                            <g transform="translate(1716.000000, 291.000000)">
-                              <g transform="translate(453.000000, 454.000000)">
-                                <path class="color-background"
-                                  d="M43,10.7482083 L43,3.58333333 C43,1.60354167 41.3964583,0 39.4166667,0 L3.58333333,0 C1.60354167,0 0,1.60354167 0,3.58333333 L0,10.7482083 L43,10.7482083 Z"
-                                  opacity="0.593633743"></path>
-                                <path class="color-background"
-                                  d="M0,16.125 L0,32.25 C0,34.2297917 1.60354167,35.8333333 3.58333333,35.8333333 L39.4166667,35.8333333 C41.3964583,35.8333333 43,34.2297917 43,32.25 L43,16.125 L0,16.125 Z M19.7083333,26.875 L7.16666667,26.875 L7.16666667,23.2916667 L19.7083333,23.2916667 L19.7083333,26.875 Z M35.8333333,26.875 L28.6666667,26.875 L28.6666667,23.2916667 L35.8333333,23.2916667 L35.8333333,26.875 Z">
-                                </path>
-                              </g>
-                            </g>
-                          </g>
-                        </g>
-                      </svg>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'password_change' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <ion-icon name="key"></ion-icon>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Change Password</span>
+                        </h6>
+                      </div>
                     </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm text-dark font-weight-normal mb-1">
-                        Payment successfully completed
-                      </h6>
-                      <p class="text-xs text-secondary mb-0">
-                        <i class="fa fa-clock me-1"></i>
-                        2 days
-                      </p>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'signout' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <ion-icon name="log-in"></ion-icon>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Logout</span>
+                        </h6>
+                      </div>
                     </div>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </li>
-          <!-- User Profile -->
-          <li class="nav-item dropdown pe-2 d-flex align-items-center">
-            <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              <img src="{{ request.user.profile.image.url }}" class="avatar avatar-sm  me-3 ">
-            </a>
-
-            <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
-              <li class="mb-2">
-                <a class="dropdown-item border-radius-md" href="{% url 'home' %}">
-                  <div class="d-flex py-1">
-                    <div
-                      class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                      <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm font-weight-normal mb-1">
-                        <span class="font-weight-bold text-dark">Home</span>
-                      </h6>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <li class="mb-2">
-                <a class="dropdown-item border-radius-md" href="{% url 'profile' request.user.username %}">
-                  <div class="d-flex py-1">
-                    <div
-                      class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                      <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm font-weight-normal mb-1">
-                        <span class="font-weight-bold text-dark">Profile</span>
-                      </h6>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <li class="mb-2">
-                <a class="dropdown-item border-radius-md" href="{% url 'settings' %}">
-                  <div class="d-flex py-1">
-                    <div
-                      class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                      <i class="ni ni-settings text-success text-sm opacity-10"></i>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm font-weight-normal mb-1">
-                        <span class="font-weight-bold text-dark">Settings</span>
-                      </h6>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <li class="mb-2">
-                <a class="dropdown-item border-radius-md" href="{% url 'password_change' %}">
-                  <div class="d-flex py-1">
-                    <div
-                      class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                      <i class="ni ni-key-25 text-success text-sm opacity-10"></i>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm font-weight-normal mb-1">
-                        <span class="font-weight-bold text-dark">Change Password</span>
-                      </h6>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <li class="mb-2">
-                <a class="dropdown-item border-radius-md" href="{% url 'signout' %}">
-                  <div class="d-flex py-1">
-                    <div
-                      class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                      <i class="ni ni-user-run text-danger text-sm opacity-10"></i>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center">
-                      <h6 class="text-sm font-weight-normal mb-1">
-                        <span class="font-weight-bold text-dark">Logout</span>
-                      </h6>
-                    </div>
-                  </div>
-                </a>
-              </li>
-
-            </ul>
-          </li>
-          <!-- Notification end -->
+                  </a>
+                </li>
+    
+              </ul>
+            </li>
+            <!-- end user profile -->
 
           <!-- Side bar toggler -->
           <li class="nav-item d-xl-none ps-3 d-flex align-items-center text-dark">
