--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -35,89 +35,57 @@
             </div>
             <!-- Notification begins -->
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton message-link"
+   data-bs-toggle="dropdown" aria-expanded="false" onclick="hideNotificationCount()">
                 <span class="bell-icon m-3">
                   <i class="fa fa-bell cursor-pointer text-dark"></i>
-                  <small class="text-danger fw-bolder">23</small>
+                  {% if distinct_senders.count >= 1 %}
+                    <small id="notification-count" class="text-danger fw-bolder">{{distinct_senders_count.count}}</small>
+                  {% endif %}
                 </span>
               </a>
-    
               <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
-                <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
-                    <div class="d-flex py-1">
-                      <div class="my-auto">
-                        <img src="./assets/img/team-2.jpg" class="avatar avatar-sm  me-3 ">
+              {% if distinct_senders %}  
+                {% for sender in distinct_senders %}
+                  {% with messages=sender.sent_messages.all %}
+                    {% if messages %}
+                      {% with latest_message=messages.latest %}
+                        <li class="mb-2">
+                          <a class="dropdown-item border-radius-md" href="{% url 'message' sender.username %}">
+                            <div class="d-flex py-1">
+                              <div class="my-auto">
+                                <img src="{{ sender.profile.image.url }}" class="avatar avatar-sm  me-3 ">
+                              </div>
+                              <div class="d-flex flex-column justify-content-center">
+                                <h6 class="text-sm font-weight-normal mb-1">
+                                  <span class="font-weight-bold">New message</span> from {{ sender.username }}
+                                </h6>
+                                <p class="text-xs text-secondary mb-0">
+                                  <i class="fa fa-clock me-1"></i>
+                                  {{ latest_message.date_sent|custom_timesince }}
+                                </p>
+                              </div>
+                            </div>
+                          </a>
+                        </li>
+                      {% endwith %}
+                    {% endif %}
+                  {% endwith %}
+                {% endfor %}
+                  {% if distinct_senders_count.count > 3 %}
+                    <li>
+                      <div class="d-flex py-1">
+                        <a class="dropdown-item border-radius-md" href="{% url 'inbox' %}">View all....</a>
                       </div>
-                      <div class="d-flex flex-column justify-content-center">
-                        <h6 class="text-sm font-weight-normal mb-1">
-                          <span class="font-weight-bold">New message</span> from Laur
-                        </h6>
-                        <p class="text-xs text-secondary mb-0">
-                          <i class="fa fa-clock me-1"></i>
-                          13 minutes ago
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-                <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
-                    <div class="d-flex py-1">
-                      <div class="my-auto">
-                        <img src="./assets/img/small-logos/logo-spotify.svg"
-                          class="avatar avatar-sm bg-gradient-dark  me-3 ">
-                      </div>
-                      <div class="d-flex flex-column justify-content-center">
-                        <h6 class="text-sm text-dark font-weight-normal mb-1">
-                          <span class="font-weight-bold">New album</span> by Travis Scott
-                        </h6>
-                        <p class="text-xs text-secondary mb-0">
-                          <i class="fa fa-clock me-1"></i>
-                          1 day
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
-                    <div class="d-flex py-1">
-                      <div class="avatar avatar-sm bg-gradient-secondary  me-3  my-auto">
-                        <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink">
-                          <title>credit-card</title>
-                          <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                            <g transform="translate(-2169.000000, -745.000000)" fill="#FFFFFF" fill-rule="nonzero">
-                              <g transform="translate(1716.000000, 291.000000)">
-                                <g transform="translate(453.000000, 454.000000)">
-                                  <path class="color-background"
-                                    d="M43,10.7482083 L43,3.58333333 C43,1.60354167 41.3964583,0 39.4166667,0 L3.58333333,0 C1.60354167,0 0,1.60354167 0,3.58333333 L0,10.7482083 L43,10.7482083 Z"
-                                    opacity="0.593633743"></path>
-                                  <path class="color-background"
-                                    d="M0,16.125 L0,32.25 C0,34.2297917 1.60354167,35.8333333 3.58333333,35.8333333 L39.4166667,35.8333333 C41.3964583,35.8333333 43,34.2297917 43,32.25 L43,16.125 L0,16.125 Z M19.7083333,26.875 L7.16666667,26.875 L7.16666667,23.2916667 L19.7083333,23.2916667 L19.7083333,26.875 Z M35.8333333,26.875 L28.6666667,26.875 L28.6666667,23.2916667 L35.8333333,23.2916667 L35.8333333,26.875 Z">
-                                  </path>
-                                </g>
-                              </g>
-                            </g>
-                          </g>
-                        </svg>
-                      </div>
-                      <div class="d-flex flex-column justify-content-center">
-                        <h6 class="text-sm text-dark font-weight-normal mb-1">
-                          Payment successfully completed
-                        </h6>
-                        <p class="text-xs text-secondary mb-0">
-                          <i class="fa fa-clock me-1"></i>
-                          2 days
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
+                    </li>
+                  {% endif %}
+                {% else %}
+                <small>no new message</small>
+              {% endif %}  
               </ul>
             </li>
+            <!-- Notification end -->
+
             <!-- User Profile -->
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
@@ -157,11 +125,25 @@
                   </a>
                 </li>
                 <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'inbox' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <ion-icon name="mail"></ion-icon>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Chats</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="{% url 'settings' %}">
                     <div class="d-flex py-1">
                       <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                        <!-- <i class="ni ni-settings text-success text-sm opacity-10"></i> -->
                         <ion-icon name="settings"></ion-icon>
                       </div>
                       <div class="d-flex flex-column justify-content-center">
@@ -177,7 +159,6 @@
                     <div class="d-flex py-1">
                       <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                        <!-- <i class="ni ni-key-25 text-success text-sm opacity-10"></i> -->
                         <ion-icon name="key"></ion-icon>
                       </div>
                       <div class="d-flex flex-column justify-content-center">
@@ -206,7 +187,7 @@
     
               </ul>
             </li>
-            <!-- Notification end -->
+            <!-- end user profile -->
           </ul>
         </div>
       </div>
