--- a/core/templates/core/comments.html
+++ b/core/templates/core/comments.html
@@ -73,6 +73,13 @@
                     {% endif %}
                   {% endwith %}
                 {% endfor %}
+                  {% if distinct_senders_count.count > 3 %}
+                    <li>
+                      <div class="d-flex py-1">
+                        <a class="dropdown-item border-radius-md" href="{% url 'inbox' %}">View all....</a>
+                      </div>
+                    </li>
+                  {% endif %}
                 {% else %}
                 <small>no new message</small>
               {% endif %}  
@@ -199,8 +206,9 @@
             <div class="container-fluid py-4">
               <div class="row">
                 <div class="col-12">
-                  <div class="card-header pb-0">
+                  <div class="card-header pb-0 d-flex justify-content-between">
                     <h6>Add comment</h6>
+                    <small class="d-flex justify-content-end">{{comments.count}} comment{{comments.count|pluralize}}</small>
                   </div>
 
                   {% for comment in comments %}
@@ -231,7 +239,7 @@
                     
                           </h6>
                           <div class="comment-text">
-                            <p class="text-xs text-dark rounded-3 p-2" style="background-color: rgb(228, 216, 240)">
+                            <p class="text-xs text-dark rounded-3 p-2">
                               {{comment.content}}
                             </p>
                           </div>
@@ -242,20 +250,20 @@
                   {% endfor %}
   
                  
-                  <div class="card">
+                  <div class="card d-flex justify-content-between">
                     <form method="POST">
                       {% csrf_token %}
-                      <div class="input-group mb-3">
-                        <div class="form-floating">
-                          <textarea name="content" class="form-control custom-width" id="floatingInputGroup1"
-                            placeholder="Comment on this post"></textarea>
-                          <label for="floatingInputGroup1">Comment on this post</label>
-                        </div>
-                        <span class="input-group-text">
-                          <button class="btn btn-success" type="submit" style="border-radius: 50%;"><i
-                              class="fa fa-send"></i></button>
-                          </i></span>
+                      <div class="form-floating d-flex justify-content-between">
+                        <textarea name="content" class="form-control" placeholder="Leave a comment here" id="floatingTextarea" required></textarea>
+                        <label for="floatingTextarea">Comment on this post</label>
+                        
+                        <button type="submit" class="rounded bg-gradient-dark">
+                            <i class="fa fa-send text-light"></i>
+                          </button> 
                       </div>
+                      <!-- <div class="">
+                          
+                      </div> -->
                     </form>
                   </div>
                 </div>
