Add goBack url to templates

--- a/core/templates/core/comments.html
+++ b/core/templates/core/comments.html
@@ -11,8 +11,7 @@
     <div class="container-fluid py-1 px-3">
       <div class="d-flex justify-content-between align-items-center w-100">
         <!-- Logo (Far Left) -->
-        <a class="navbar-brand" href="{{request.META.HTTP_REFERER}}">
-          <!-- <img src="your-logo.png" alt="Logos"> -->
+        <a class="navbar-brand" href="#" onclick="goBack()">
           <i class="ni ni-bold-left"></i>
         </a>
 
