--- a/templates/base.html
+++ b/templates/base.html
@@ -382,6 +382,13 @@ label {
         }
     }
 </script>
+<!-- for handling go backs -->
+<script>
+function goBack() {
+    history.go(-1);  // This navigates back one step in the history
+}
+</script>
+<!-- end -->
     <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
