--- a/core/templates/core/settings.html
+++ b/core/templates/core/settings.html
@@ -10,11 +10,9 @@
       data-scroll="false">
       <div class="container-fluid py-1 px-3">
         <div class="d-flex justify-content-between align-items-center w-100">
-          <!-- Logo (Far Left) -->
-          <a class="navbar-brand" href="{{request.META.HTTP_REFERER}}">
-            <!-- <img src="your-logo.png" alt="Logos"> -->
-            <i class="ni ni-bold-left"></i>
-          </a>
+          <a class="navbar-brand" href="#" onclick="goBack()">
+          <i class="ni ni-bold-left"></i>
+        </a>
     
           <!-- User Profile and Notification (Far Right) -->
           <ul class="navbar-nav">
