--- a/core/templates/core/comments.html
+++ b/core/templates/core/comments.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/mystyle.css' %}">
 
 <main class="main-content position-relative border-radius-lg ">
   <!-- Navbar -->
